# jetracer-working-code

./: .gitignore  1st _run_openai_mocap.txt  error.txt  labrun1.txt  last_run.txt  position1.jsonl  position2.jsonl  position3.jsonl  position4.jsonl  position5.jsonl  qwen2.txt  requirements_old.txt  restore_env.sh  setup_project.sh
devel/include/custom_msgs/: ChatPrompt.h  ChatPromptRequest.h  ChatPromptResponse.h
devel/lib/pkgconfig/: barrier_function.pc  chat_gpt.pc  custom_msgs.pc  mobile_dd_robot.pc  my_robot_controller.pc  reachability_analysis.pc  system_identification.pc
devel/share/barrier_function/cmake/: barrier_functionConfig.cmake
devel/share/chat_gpt/cmake/: chat_gptConfig.cmake
devel/share/custom_msgs/cmake/: custom_msgs-msg-extras.cmake  custom_msgs-msg-paths.cmake  custom_msgsConfig.cmake
devel/share/mobile_dd_robot/cmake/: mobile_dd_robotConfig.cmake
devel/share/my_robot_controller/cmake/: my_robot_controllerConfig.cmake
devel/share/reachability_analysis/cmake/: reachability_analysisConfig.cmake
devel/share/system_identification/cmake/: system_identificationConfig.cmake
src/barrier_function/: CMakeLists.txt  motion_capture.py  setup.cfg  setup.py
src/barrier_function/launch/: barrier_function.launch
src/chat_gpt/chat_gpt/: chat_gpt_service.py
src/llm_controller_comparison/: CMakeLists.txt  package.xml
src/llm_controller_comparison/config/: api_config.py
src/llm_controller_comparison/launch/: llm_controller.launch
src/llm_controller_comparison/scripts/: llm_controller_node.py
src/my_robot_controller/: CMakeLists.txt  setup.py
src/my_robot_controller/launch/: safe_LLM_controller.launch  safellmra_llm_controller.launch  simple_path_follower.launch
src/my_robot_controller/my_robot_controller/: LLM_robot_controller.py  config.py  config.yaml  data_collector.py  dataset_loader.py  goal_manager.py  llm_agent.py  safellmra_llm_controller.py  safellmra_turtlebot_controller.py  safety_check_nonlinear_reachability.py  safety_controller.py  simple_path_follower.py  system_identification.py  td3_agent.py  zonotope.py
src/my_robot_controller/scripts/: simple_path_follower.py
src/openai_mocap_controller/: CMakeLists.txt  INSTALL.md  PROJECT_SUMMARY.md  README.md  README_OLLAMA.md  compare_versions.py  package.xml  run_controller.sh  setup_environment.sh  setup_ollama.sh  test_ollama.py  test_openai.py
src/openai_mocap_controller/config/: controller_config.yaml
src/openai_mocap_controller/launch/: ollama_mocap_controller.launch  openai_mocap_controller.launch
src/openai_mocap_controller/scripts/: ollama_mocap_controller.py  openai_mocap_controller.py  performance_analyzer.py  test_mocap_connection.py
src/py_zonotope-main/py_zonotope-main/example/: reachability_nonlinear_test.py
src/py_zonotope-main/pyzonotope/: SafetyLayer.py
src/system_identification/system_identification/: real_time_data.npy
src/zonotope/pyzonotope/pyzonotope/: SafetyLayer.py
(+149 files in other folders)
