<?xml version="1.0"?>
<package format="2">
  <name>llm_controller_comparison</name>
  <version>0.0.1</version>
  <description>Package for comparing different LLM models for robot control</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  
</package>
